# syntax-highligter-bot

./: .env.example  .gitignore  README.md  bot.py  config.py  package-lock.json  package.json  pyproject.toml  screenshot-service.js
assets/css/: styles.css
bot/: dispatcher.py
handlers/: __init__.py  errors.py  misc.py
screenshot-service/: utils.js
tests/: test_syntax_highligter_bot.py
views/: template.html
